--- a/библиотека компонентов/css/time_select.css
+++ b/библиотека компонентов/css/time_select.css
@@ -19,6 +19,7 @@
 	font-size: 15px;
 	/* background-image: url("../Icons/check_time_icon.svg"); */
 	background-size: 16px 20px;
+	
 }
 
 /* Компонент с выбором часового пояса ON*/
@@ -33,4 +34,8 @@
 
 .off {
 	background-image: none;
+}
+
+.btn_bottom {
+     margin-top: 270px;
 }
