--- a/старые экраны/css/redesign.css
+++ b/старые экраны/css/redesign.css
@@ -1,31 +1,28 @@
 .search_redesign {
-	width: 172px;
+	width: 217px;
 	height: 36px;
-	display: flex;
-	color: #666787;
-	background: #D9E2EF;
-	justify-content: space-between;
-	border: 1px solid #152842;
-	box-shadow: inset 0px 1px 2px rgba(10, 15, 26, 0.08);
-	margin-left: 220px ;
-	margin-right: 9px;
+	display: inline-flex;
+	background: #F8FAFC;
+	border: 1px solid #E2E8F0;
+    border-radius: 24px;
+	
 }
 
 .search_redesign_icon {
-	width: 35px;
-	height: 34px;
-	background: #4B759E;
+	width: 20px;
+	height: 20px;
+	background: #94A3B8;
 }
 
 .search_redesign span{
-	font-family: 'Arial';
+	font-family: 'Arival';
 	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 16px;
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 18px;
 	padding: 9px 0px 9px 9px;
 	letter-spacing: -0.005em;
-	color: #666787;
+	color: #0F172A;
 }
 
 
@@ -38,8 +35,8 @@
 	font-family: 'Arial';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 14px;
-	line-height: 16px;
+	font-size: 15px;
+	line-height: 18px;
 	color: #666787;
 	margin-bottom: 8px;
 }
@@ -64,4 +61,34 @@ b {
 
 .mt4 {
 	margin-top: 4px
+}
+.search-new {
+	display:flex;
+	align-items: center;
+	border: 1px solid #E2E8F0;
+	border-radius: 24px;
+	padding: 9px 16px;
+	background: #F8FAFC;
+	color: #94A3B8;
+}
+
+.search-icon {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	order: 1;
+}
+
+.search-field {
+	width: 217px;
+	border: 0;
+	background: #F8FAFC;
+}
+
+.search-field:focus {
+	outline: none;
+}
+
+.search-field:focus + .search-icon {
+
 }
